--- a/charts/addons/external-dns/values.yaml
+++ b/charts/addons/external-dns/values.yaml
@@ -178,7 +178,7 @@ txtPrefix: ""
 # Specifies a suffix for the domain names of TXT records created by the "txt" registry. Optional. Mutually exclusive with `txtPrefix`.
 txtSuffix: ""
 
-domainFilters: linuxer.name
+domainFilters: "linuxer.name"
 
 provider: aws
 
